webserver/pipeline/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: webserver-build
  labels:
    ext-secret-registry-conf: "true"
    ext-secret-ssh-dir: "true"
    ext-secret-gitops-admin: "true"
