webserver/pipeline/manifests/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pipeline-trigger
spec:
  host: webserver-build.ocp.straubcloud.de
  to:
    kind: Service
    name: el-webserver-container
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
